Fixed issue with the extra white space when using mobile responsive

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* border: 1px solid red; */
+  /* border: 1px solid red;
+  background: black; */
+}
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -571,15 +578,15 @@ img {
 
   /* Hero section */
   #headline {
-    position: relative;
-    top: 20px;
+    position: absolute;
+    top: 120px;
     left: 5px;
     font-size: 45px;
   }
 
   #arrow {
     position: absolute;
-    top: 285px;
+    top: 287px;
     left: 200px;
   }
 
@@ -590,16 +597,16 @@ img {
 
   .img-col {
     position: absolute;
-    top: -67px;
+    top: -69px;
     width: 437px;
   }
 
   .text-col {
     text-align: center;
-    position: relative;
-    top: 250px;
+    position: absolute;
+    top: 225px;
     left: -50px;
-    width: 500px;
+    width: 100%;
   }
 
   #brand1 {
@@ -608,8 +615,10 @@ img {
   }
 
   #subtitle1 {
+    text-align: center;
     position: absolute;
     left: -10px;
+    width: 350px;
   }
 
   #yellow {
@@ -625,26 +634,26 @@ img {
 
   .text-col2 {
     text-align: center;
-    top: 1080px;
-    left: 20px;
-    width: 400px;
+    top: 1070px;
+    left: 50px;
+    width: 385px;
   }
 
   #brand2 {
     position: absolute;
-    left: 20px;
+    left: 35px;
     width: 75%;
   }
 
   #subtitle2 {
     position: absolute;
-    left: 30px;
+    left: 40px;
   }
 
   #pink {
     position: absolute;
     top: 410px;
-    left: 110px;
+    left: 125px;
   }
 
   .img-text-col3 {
@@ -660,7 +669,7 @@ img {
   #brand3 {
     position: absolute;
     top: 305px;
-    left: 150px;
+    left: 135px;
   }
 
   #subtitle3 {
@@ -673,6 +682,7 @@ img {
   .img-text-col4 {
     position: absolute;
     top: 2080px;
+    left: 63px;
     width: 437px;
   }
 
@@ -700,7 +710,6 @@ img {
     position: absolute;
     top: 2900px;
     width: 370px;
-    height: 600px;
   }
 
   .client-text {
@@ -708,6 +717,7 @@ img {
     position: absolute;
     top: 380px;
     left: 50px;
+    width: 350px;
   }
 
   .testimonial1 {
@@ -762,7 +772,7 @@ img {
   }
 
   #title-2 {
-    margin-top: 30px;
+    margin-top: 40px;
     margin-left: 15px;
   }
 
@@ -780,7 +790,7 @@ img {
 
   #name3 {
     position: absolute;
-    top: 270px;
+    top: 265px;
   }
 
   #title-3 {
@@ -818,12 +828,13 @@ img {
   }
 
   .social-icons {
-    display: flex;
-    flex-direction: row;
     width: 50%;
+    min-width: 0;
+    min-height: 0;
   }
 
   .social-icons i {
+    display: ruby-text;
     position: relative;
     top: 200px;
     left: -200px;
